--- a/components/Table.module.css
+++ b/components/Table.module.css
@@ -1,7 +1,7 @@
 .header-title {
   font-weight: bold;
   font-size: 1.2rem;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
   /*text-align: center;*/
