--- a/components/Table.module.css
+++ b/components/Table.module.css
@@ -36,13 +36,24 @@
 .table {
   background-color: white;
   min-width: 99%;
-  border: 2px solid black;
+  border: 1px solid rgb(0, 0, 0, .1);
   padding: 0;
   border-collapse: collapse;
 }
 
+.table thead tr:first-child {
+  font-size: 20px;
+  font-family: Arial;
+  text-align: left;
+}
+
+.table thead tr:nth-child(2) {
+  border-top: 2px solid black;
+}
+
 .tableHead {
   padding: 0;
+  border-bottom: 1px solid black;
 }
 
 .row {
@@ -52,6 +63,11 @@
 .rowOdd {
   composes: row;
   background-color: #eee;
+}
+
+.totalRow {
+  background-color: #5e6a71;
+  color: #FFF;
 }
 
 .cell {
