--- a/components/KeyFindings.module.css
+++ b/components/KeyFindings.module.css
@@ -1,5 +1,6 @@
 .container {
     margin: 5px 0;
+    margin-bottom: 20px;
     border: 1px solid #4F868E;
     border-radius: 4px;
     padding: 5px -10px;
