--- a/components/Table.module.css
+++ b/components/Table.module.css
@@ -39,6 +39,7 @@
   border: 1px solid rgb(0, 0, 0, .1);
   padding: 0;
   border-collapse: collapse;
+  margin-bottom: 20px;
 }
 
 .table thead tr:first-child {
