--- a/components/KeyFindings.module.css
+++ b/components/KeyFindings.module.css
@@ -3,14 +3,23 @@
     margin-bottom: 20px;
     border: 1px solid #4F868E;
     border-radius: 4px;
-    padding: 5px -10px;
+    padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #FFF;
 }
+.container h4 {
+    margin: 5px
+}
+
+.container ul {
+    padding-left: 30px;
+}
+
 .title {
     text-align: center;
     font-weight: 600;
 }
+
 .container p {
     margin: 5px 20px;
 }
