--- a/components/Chart.module.css
+++ b/components/Chart.module.css
@@ -1,4 +1,67 @@
 .chart {
-    width: 600px;
-    height: 300px;
+  width: 400px;
+}
+
+.chartSmall {
+    width: 150px !important;
+  }
+
+.title {
+  font-weight: 600;
+  line-height: 1.3;
+}
+
+.container {
+  padding-left: 20px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  background-color: #f7fafc;
+  border: 1px solid rgb(226, 232, 240);
+  border-radius: 0.25rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.content {
+  display: none;
+}
+
+.activeContent {
+  display: block;
+}
+
+.tabs {
+  border: 1px solid #4f868e;
+  border-radius: 3px;
+  padding: 2px 4px;
+  margin-right: 0.5rem;
+}
+
+.activeTab {
+  background-color: #4f868e;
+  color: #fff;
+  border: 1px solid #4f868e;
+  border-radius: 3px;
+  padding: 2px 4px;
+  margin-right: 0.5rem;
+}
+
+.active {
+  display: block;
+}
+
+.inactive {
+  display: none;
+}
+
+.tabSwitch {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 6px 8px;
+  width: 10%;
+  background-color: #419639;
+  font-size: 1rem;
+  color: #fff;
 }
