--- a/components/Table.module.css
+++ b/components/Table.module.css
@@ -36,6 +36,7 @@
 .table {
   background-color: white;
   min-width: 99%;
+  max-width: 100%;
   border: 1px solid rgb(0, 0, 0, .1);
   padding: 0;
   border-collapse: collapse;
@@ -85,6 +86,7 @@
 }
 
 .outputs {
+  font-family: Arial;
   margin-bottom: 25px;
 }
 
@@ -95,4 +97,5 @@
   padding: 5px 5px;
   min-width: 30px;
   text-align: center;
+  text-decoration: none;
 }
