add indiv table 3. Css modifications

--- a/components/DynamicTitles.module.css
+++ b/components/DynamicTitles.module.css
@@ -1,6 +1,6 @@
 .title {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: 400;
-    border-bottom: 4px solid #367C2B;
+    border-bottom: 4px solid var(--brightGreen);
     text-align: center;
 }
