--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -6,7 +6,7 @@
     font-family: Capriola;
     text-transform: uppercase;
     float: right;
-    border-bottom: 2px solid #4F868E;
+    border-bottom: 2px solid var(--brightGreen);
     padding-right: 10px;
     text-align: right;
 }
