--- a/components/Jumps.module.css
+++ b/components/Jumps.module.css
@@ -17,7 +17,7 @@
 .tableLinks a {
   padding: 5px 10px;
   margin-right: 5px;
-  background-color: var(--brightGreen);
+  background-color: var(--redOrange);
   color: white;
   text-decoration: none;
   border-radius: 3px;
