--- a/components/Table.module.css
+++ b/components/Table.module.css
@@ -80,6 +80,10 @@
   font-family: Helvetica, Arial, sans-serif;
 }
 
+.left {
+  text-align: left;
+}
+
 .red {
   background-color: rgba(255, 255, 255, 0.7);
 }
@@ -90,7 +94,7 @@
 }
 
 .download {
-  background-color: var(--brightGreen);
+  background-color: var(--redOrange);
   color: white;
   border-radius: 0.5rem;
   padding: 5px 5px;
