--- a/components/Main.css
+++ b/components/Main.css
@@ -14,7 +14,7 @@ body {
     margin: 5px;
     position: relative;
     min-width: 300px;
-    font-family: Capriola;
+    font-family: Lato;
 }
 .div {
     width: 100%;
