--- a/components/Methods.module.css
+++ b/components/Methods.module.css
@@ -1,3 +1,18 @@
+.container {
+    padding: 15px;
+    margin-top: 10px;
+    background-color: #f7fafc;
+    border: 1px solid rgb(226, 232, 240);
+    border-radius: 0.25rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.container p {
+    display: inline;
+}
+
 .box {
     margin-top: 5px;
     font-size: 1rem;
@@ -6,6 +21,7 @@
 
 .title {
     margin-right: .5rem;
+    display: inline;
 }
 
 .link {
