--- a/components/DynamicTitles.module.css
+++ b/components/DynamicTitles.module.css
@@ -7,7 +7,7 @@
 }
 
 .TableTitle {
-    font-family: 'Late', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Lato', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: 600;
     text-align: center;
 }
