--- a/components/Table.module.css
+++ b/components/Table.module.css
@@ -110,7 +110,18 @@
 
 .pages {
   text-align: right;
+  margin-bottom: 5px;
 }
+
 .pages span {
-  padding-right: 5px;
+  padding: 5px;
+}
+
+.pages button {
+  font-size: 1.2em;
+}
+
+.pages button a {
+  color: black;
+  text-decoration: none;
 }
