--- a/components/DynamicTitles.module.css
+++ b/components/DynamicTitles.module.css
@@ -4,10 +4,13 @@
     /*border-bottom: 4px solid var(--brightGreen);*/
     text-align: center;
     font-size: 2rem;
+    padding-top: 15px;
+    clear: both;
 }
 
 .TableTitle {
     font-family: 'Lato', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: 600;
     text-align: center;
+    font-size: 1.2rem;
 }
