--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -1,16 +1,25 @@
 .header {
     margin: 10px;
+    display: flex;
 }
 
 .heading {
     text-transform: uppercase;
-    float: right;
+    display: inline-block;
+    text-align: center;
     /*border-bottom: 2px solid var(--brightGreen);*/
-    padding-right: 10px;
-    text-align: right;
+    padding-left: 100px;
 }
 
 .heading h1, .heading h2 {
     font-family: 'Lato';
     font-weight: 900;
+}
+
+.left, .right {
+    flex: 1;
+}
+
+.right {
+    text-align: right;
 }
