--- a/components/Table.module.css
+++ b/components/Table.module.css
@@ -13,7 +13,7 @@
 .groupHeader {
   composes: header-title;
   border: 2px solid black;
-  padding: 1rem 0;
+  padding: .5rem 0;
   text-align: center;
 }
 
@@ -21,7 +21,7 @@
   composes: header-title borderBottom;
   margin: -1px;
   padding: 0;
-  padding: 1rem;
+  padding: .5rem;
   text-align: center;
   font-size: 0.9rem;
 }
@@ -88,7 +88,7 @@
 }
 
 .totalRow .summaryCell:first-child {
-  text-align: left;
+  text-align: right;
   margin-left: 2px;
 }
 
