--- a/components/Table.module.css
+++ b/components/Table.module.css
@@ -31,8 +31,8 @@
   composes: columnHeader;
   border-right: 2px solid black;
 }
-
 .table {
+  display: grid;
   background-color: white;
   min-width: 99%;
   max-width: 100%;
@@ -55,6 +55,7 @@
 .table thead tr:nth-child(n + 2) th {
   font-size: 0.9rem;
 }
+
 .tableHead {position: sticky;
     top: 0;
     background-color: #fff;
@@ -147,5 +148,9 @@
 .pages button a {
   color: black;
   text-decoration: none;
+}
+
+.parentRow {
+  display: grid;
 }
 
