--- a/components/Main.css
+++ b/components/Main.css
@@ -68,18 +68,23 @@ a:hover {
 .button:hover {
     background-color: var(--yellow);
 }
-
+/* Changes for CSS Grid tables */
 .commodity1 > [class*="Table_tableHead"] > div:nth-child(2) {
     display: grid;
-    grid-template-columns: 1fr 3fr 2fr 3fr;
+    grid-template-columns: 175px 3fr 2fr 3fr;
 }
 
 .commodity1 > [class*="Table_tableHead"] > div:nth-child(3) {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 175px 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
-.commodity1 > div:nth-child(2) div {
+.commodity1 > div[role=rowgroup] > div {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 175px 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+.commodity1 > [class*="Table_totalRow"] > div {
+    display: grid;
+    grid-template-columns: 175px 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
